# OpenTraversability

./: CMakeLists.txt  CMakeLists.txt~  README.txt  version_prefix.txt
CMakeModules/: UtilsMacros.cmake  script_BuildInstall.cmake  script_BuildPackage.cmake  script_init_cmake.cmake
Ext_data/: README.txt
apps/: CMakeLists.txt
apps/tinycnn_demo_cmdline/: CMakeLists.txt  CMakeLists.txt~
apps/upd_DEMO/: CMakeLists.txt  CMakeLists.txt~  PCL_upd_DEMO.cpp  PCL_upd_DEMO.h  PCL_upd_DEMO.ui  PCL_upd_DEMO_CNN.cpp  PCL_upd_DEMO_SVM.cpp  PCL_upd_DEMO_actions.cpp  PCL_upd_DEMO_features.cpp  PCL_upd_DEMO_filters.cpp  PCL_upd_DEMO_labelling.cpp  PCL_upd_DEMO_upd.cpp  main.cpp
apps/upd_DEMO_cmdline/: CMakeLists.txt  upd_cmdline_demo.cpp
apps/upd_SVM_DEMO_cmdline/: CMakeLists.txt  upd_svm_cmdline_demo.cpp
apps/upd_vREPdemo_cmdline/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
libs/VrepRemoteApi/: CMakeLists.txt
libs/VrepRemoteApi/include/: export.h  extApiCustom.h  v_repLib.h
libs/VrepRemoteApi/src/: extApi.c
libs/upd_lib/: CMakeLists.txt
libs/upd_lib/include/: export.h  upd.h
libs/upd_lib/src/: upd.cpp
resources/: try_cloud.pcd
